syntax = "proto3";

option go_package = ".;protos";

import "utils.proto";

message Tweet {
  int64 id = 1;
  int64 parent_id = 2;
  string creator = 3;
  string content = 4;
  int64 creation_timestamp = 5;
}

message CreateTweetRequest {
  int64 parent_id = 1;
  string creator = 2;
  string content = 3;
}

message GetTweetsRequest {
  repeated int64 tweets = 1;
}

message GetTweetsReply {
  oneof reply {
    Tweet tweet = 1;
    bool error = 2;
  }
}

message EditTweetRequest {
  int64 id = 1;
  string content = 2;
}

message DeleteTweetsRequest {
  enum Context {
    Client = 0;
    Service = 1;
  }

  Context context = 1;
  repeated int64 tweets = 2;
}

service Tweets {
  rpc CreateTweet(CreateTweetRequest) returns (Empty);
  rpc GetTweets(GetTweetsRequest) returns (stream GetTweetsReply);
  rpc DeleteTweets(DeleteTweetsRequest) returns (Empty);
}
