syntax = "proto3";

option go_package = ".;protos";

import "utils.proto";

message User {
  string username = 1;
  string firstname = 2;
  string lastname = 3;
  string description = 4;
  int64 registration_timestamp = 5;
  repeated string followers = 6;
  repeated string following = 7;
  repeated int64 tweets = 8;
}

message CreateRequest {
  string username = 1;
  string firstname = 2;
  string lastname = 3;
  string description = 4;
}

message DeleteRequest {
  string username = 1;
}

message GetSummaryRequest {
  string username = 1;
}

message GetSummaryReply {
  string username = 1;
  string firstname = 2;
  string lastname = 3;
  string description = 4;
  int64 registration_timestamp = 5;
  int64 followers_count = 6;
  int64 following_count = 7;
  int64 tweets_count = 8;
}

enum Role {
  Follower = 0;
  Followed = 1;
}

message GetUsersRequest {
  string username = 1;
  Role role = 2;
}

message GetUsersReply {
  oneof reply {
    User user = 1;
    bool error = 2;
  }
}

message GetTimelineRequest {
  string username = 1;
}

message GetTimelineResponse {
  repeated int64 timeline = 1;
}

message FollowRequest {
  string follower = 1;
  string followed = 2;
}

service Users {
  rpc CreateUser(CreateRequest) returns (Empty);
  rpc DeleteUser(DeleteRequest) returns (Empty);
  rpc GetUserInfoSummary(GetSummaryRequest) returns (GetSummaryReply);

  rpc GetUsers(GetUsersRequest) returns (stream GetUsersReply);
  rpc GetTimeline(GetTimelineRequest) returns (GetTimelineResponse);

  rpc Follow(FollowRequest) returns (Empty);
  rpc Unfollow(FollowRequest) returns (Empty);
}
